infra/hell/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hell-deployment
  labels:
    app: hell
spec:
  selector:
    matchLabels:
      app: hell
  template:
    metadata:
      labels:
        app: hell
    spec:
      containers:
        - name: hell
          image: ghcr.io/kofoednielsen/pass-hell:161 # {"$imagepolicy": "pass:hell"}
