infra/hell/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hell-service
spec:
  selector:
    app: hell
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
