infra/hell/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hell-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hell-service
            port:
              number: 80
